# app/gateway/http/router.go
@@ -2,12 +2,15 @@ package http
 
 import (
 	"back-platform/app/config"
+	categoryUsecase "back-platform/app/domain/usecases/category"
 	loginUsecase "back-platform/app/domain/usecases/login"
 	specialtyUsecase "back-platform/app/domain/usecases/specialty"
 	userUsecase "back-platform/app/domain/usecases/user"
+	categoryHandler "back-platform/app/gateway/http/category"
+	categoryRepo "back-platform/app/gateway/http/db/category"
 	specialtyRepository "back-platform/app/gateway/http/db/specialty"
 	userRepository "back-platform/app/gateway/http/db/user"
-	"back-platform/app/gateway/http/login"
+	loginHandler "back-platform/app/gateway/http/login"
 	"back-platform/app/gateway/http/rest"
 	specialtyHandler "back-platform/app/gateway/http/specialty"
 	userHandler "back-platform/app/gateway/http/user"
@@ -51,11 +54,19 @@ func newHandler(_ config.Config, db *pgxpool.Pool) (http.Handler, error) {
 	userHandler := userHandler.NewHandler(userUsecase)
 
 	loginUsecase := loginUsecase.NewUsecase(userRepo)
-	loginHandler := login.NewHandler(loginUsecase)
+	loginHandler := loginHandler.NewHandler(loginUsecase)
+
+	categoryRepo := categoryRepo.NewRepository(db)
+	categoryUsecase := categoryUsecase.NewUsecase(categoryRepo)
+	categoryHandler := categoryHandler.NewHandler(categoryUsecase)
 
 	r.Route("/admin/v1/medical-catalog", func(r chi.Router) {
 		r.Route("/specialties", func(r chi.Router) {
 			r.Post("/", rest.Handle(specialtyHandler.CreateSpecialty))
+		})
+
+		r.Route("/categories", func(r chi.Router) {
+			r.Post("/", rest.Handle(categoryHandler.CreateCategory))
 		})
 
 		r.Route("/login", func(r chi.Router) {
